facille玻尿酸pc端样式
facille玻尿酸pc端样式

--- a/static.hzshuangmei.com/css/pc/facille/index_css1.css
+++ b/static.hzshuangmei.com/css/pc/facille/index_css1.css
@@ -337,7 +337,7 @@
     margin-top:50px;
 }
 .container .part_6 .content7 div:last-child{
-    margin:120px 0 0 35px;
+    margin:120px 0 0 0;
 }
 .container .part_6 .content7 div:last-child p{
     font-size:18px;
