--- a/static.hzshuangmei.com/css/m/hzbbqb/css1.css
+++ b/static.hzshuangmei.com/css/m/hzbbqb/css1.css
@@ -42,7 +42,7 @@ a {
 }
 .main-top {
     width: 100%;
-    height: 1.9rem;
+    height: 1rem;
     border-bottom: .025rem dashed #fff;
 }
 .Mone-top {
@@ -584,7 +584,7 @@ a {
     height: 13.375rem;
     margin: 0 auto;
     overflow: hidden;
-    background: url(//img.hzshuangmei.com/m/hzbbqb/images/like.png) no-repeat bottom left;
+    background: url(//img.hzshuangmei.com/m/hzbbqb/images/lzk.png) no-repeat bottom left;
 }
 .doctorarc {
     width: 10rem;
