自体脂肪样式修改2
自体脂肪样式修改2

--- a/static.hzshuangmei.com/css/pc/zitizhifang/style.css
+++ b/static.hzshuangmei.com/css/pc/zitizhifang/style.css
@@ -384,7 +384,7 @@ img {
     border: 1px solid black;
 }
 
-.button p {
+.button a {
     color: #000;
     text-align: center;
     line-height: 60px;
