--- a/static.hzshuangmei.com/css/m/longbijiage/style.css
+++ b/static.hzshuangmei.com/css/m/longbijiage/style.css
@@ -97,7 +97,7 @@ img {
       font-size: 0.45rem;
       color: #535353; }
 
-.line {
+.lbjg_line {
   width: 100%;
   height: 0.2rem;
   background: #c1cfdc;
