--- a/static.hzshuangmei.com/css/m/hzbbqb/css1.css
+++ b/static.hzshuangmei.com/css/m/hzbbqb/css1.css
@@ -17,6 +17,7 @@ li {
 }
 img {
     display: block;
+
     border: 0;
 }
 em {
@@ -24,11 +25,13 @@ em {
 }
 body {
     font-family: "微软雅黑";
+
     color: #fff;
     background-color: #bac79c;
 }
 a {
     text-decoration: none;
+
     border: none;
 }
 .banner {
@@ -36,22 +39,27 @@ a {
 }
 .main {
     width: 16rem;
-    height: 161.05rem;
+    height: 155.05rem;
     margin: 0 auto;
+
     box-shadow: 0 2.325rem .5rem #565655;
 }
 .main-top {
     width: 100%;
     height: 1rem;
+
     border-bottom: .025rem dashed #fff;
 }
 .Mone-top {
     position: relative;
+
     width: 11.875rem;
     height: 1.625rem;
     padding-top: .25rem;
     margin: .175rem auto 1.375rem;
+
     text-align: center;
+
     background-color: #98b478;
 }
 .Mone-top img {
@@ -60,37 +68,45 @@ a {
 .Mone-top .p1 {
     font-size: .75rem;
     font-weight: 700;
+
     color: #fff;
 }
 .Mone-top .p2 {
     font-family: "Opima";
     font-size: .35rem;
     font-weight: 700;
-    word-spacing: -0.125rem;
+
+    word-spacing: -.125rem;
+
     color: #d6e1c9;
 }
 .Mone-top:before,
 .Mone-top:after {
     position: absolute;
+
     width: 0;
     height: 0;
+
     content: "";
 }
 .Mone-top:before {
-    bottom: -0.025rem;
-    left: -0.025rem;
+    bottom: -.025rem;
+    left: -.025rem;
+
     border-right: .75rem solid transparent;
     border-bottom: .75rem solid #bac79c;
 }
 .Mone-top:after {
-    right: -0.025rem;
-    bottom: -0.025rem;
+    right: -.025rem;
+    bottom: -.025rem;
+
     border-bottom: .75rem solid #bac79c;
     border-left: .75rem solid transparent;
 }
 .main01,
 .main02 {
     position: relative;
+
     width: 15.725rem;
     height: 9.475rem;
     padding-top: .25rem;
@@ -114,32 +130,40 @@ a {
 .MOner-top {
     width: 100%;
     height: 4.65rem;
+
     background: url(//img.hzshuangmei.com/m/hzbbqb/images/ysbyinying.png) no-repeat bottom center;
 }
 .MOner-top p,
 .Mttop-in p {
     position: relative;
+
     font-size: .7rem;
     font-weight: 700;
     line-height: 1.225rem;
+
     text-align: center;
+
     color: #25281f;
 }
 .MOner-top p em,
 .Mttop-in p em {
     position: absolute;
     left: 1.075rem;
+
     font-size: .375rem;
+
     color: #fff;
 }
 .MOarc {
     width: 4.4rem;
     height: 2.85rem;
     padding: .25rem 0 0 .625rem;
+
     background-color: #74a6a5;
 }
 .MOner-b {
     position: relative;
+
     margin-top: .325rem;
 }
 .MOner-b .MOarc {
@@ -150,8 +174,10 @@ a {
     top: .15rem;
     left: 2.625rem;
     z-index: -1;
+
     width: 9.25rem;
     height: .625rem;
+
     border: .025rem solid #fff;
     border-bottom: 0;
 }
@@ -160,7 +186,9 @@ a {
     position: absolute;
     top: .625rem;
     left: -1.775rem;
+
     width: 2.9rem;
+
     border-top: .025rem solid #fff;
 }
 .main02 {
@@ -183,10 +211,12 @@ a {
 .Mttop {
     width: 100%;
     height: 4.65rem;
+
     background: url(//img.hzshuangmei.com/m/hzbbqb/images/ysbyinying.png) no-repeat bottom center;
 }
 .Mttop-in {
     position: relative;
+
     width: 100%;
     height: 4.1rem;
 }
@@ -195,7 +225,9 @@ a {
     height: 3.075rem;
     padding: .25rem .025rem 0 .25rem;
     box-sizing: border-box;
+
     font-size: .475rem;
+
     background-color: #c7ad92;
 }
 .Mttop-in p em {
@@ -209,11 +241,13 @@ a {
 }
 .main02 i {
     position: absolute;
-    top: -0.175rem;
+    top: -.175rem;
     left: 3.725rem;
     z-index: -1;
+
     width: 10.8rem;
     height: 1rem;
+
     border: .025rem solid #fff;
     border-bottom: 0;
 }
@@ -221,48 +255,64 @@ a {
     position: absolute;
     top: .625rem;
     right: -1.725rem;
+
     width: 2.9rem;
+
     border-top: .025rem solid #fff;
 }
 .standard {
     position: relative;
+
     width: 13.8rem;
     height: .95rem;
     margin: 1.75rem auto 1.7rem;
+
     border: .025rem solid #fff;
 }
 .standard p,
 .standard h3,
 .standard h2 {
     position: absolute;
+
     font-weight: 700;
+
     background-color: #bac79c;
 }
 .standard p {
-    top: -0.425rem;
+    top: -.425rem;
     left: 1.15rem;
+
     width: 7.5rem;
     height: .675rem;
+
     font-size: .5rem;
+
     text-align: right;
+
     color: #648357;
 }
 .standard h3 {
-    bottom: -0.325rem;
+    bottom: -.325rem;
     left: 3.325rem;
+
     width: 5.375rem;
     height: .825rem;
     padding-left: .375rem;
+
     font-size: .7rem;
+
     color: #000;
 }
 .standard h2 {
     right: .225rem;
-    bottom: -0.475rem;
+    bottom: -.475rem;
+
     width: 4.75rem;
     height: 1.25rem;
+
     font-size: 1.1rem;
     line-height: 1.25rem;
+
     color: #ed7c61;
     background: url(//img.hzshuangmei.com/m/hzbbqb/images/gantan.png) no-repeat bottom right;
     background-color: #bac79c;
@@ -276,11 +326,13 @@ a {
     width: 10.875rem;
     height: 2rem;
     margin: .675rem 0 0 .3rem;
+
     background: url(//img.hzshuangmei.com/m/hzbbqb/images/qq.png) no-repeat center bottom;
 }
 .Mrtop-in {
     width: 100%;
     height: 1.7rem;
+
     border-radius: .375rem;
     background-color: #fff;
 }
@@ -289,7 +341,9 @@ a {
     width: 7.6rem;
     height: 1.6rem;
     margin-left: .025rem;
+
     text-align: center;
+
     border: .05rem solid #fff;
     border-radius: .375rem;
     background-color: #f4c778;
@@ -302,7 +356,9 @@ a {
     width: 14.75rem;
     height: 1.35rem;
     margin: 0 auto;
+
     line-height: .75rem;
+
     color: #757e62;
 }
 .meihuer,
@@ -315,15 +371,18 @@ a {
 }
 .youshiq {
     position: relative;
+
     width: 15.25rem;
     height: 10rem;
     margin: 0 auto;
+
     border: .05rem solid #98b478;
 }
 .youshiq-l {
     position: absolute;
     top: .925rem;
     left: .65rem;
+
     width: 4.925rem;
     height: 7.625rem;
 }
@@ -335,10 +394,13 @@ a {
 .ystitle {
     width: 100%;
     height: 1.2rem;
+
     font-size: .8rem;
     font-weight: 700;
     line-height: 1.2rem;
+
     text-align: center;
+
     color: #768556;
     background-color: #dde3ce;
 }
@@ -346,6 +408,7 @@ a {
     width: 100%;
     height: 2.25rem;
     margin-top: .125rem;
+
     line-height: .725rem;
 }
 .ystitle-margin {
@@ -370,33 +433,40 @@ a {
 .different .p1 {
     font-size: .65rem;
 }
-.title {
+.title1 {
     position: relative;
+
     width: 15.75rem;
     height: 1.45rem;
     margin: 0 auto;
+
     border: .025rem solid #fff;
 }
-.title p {
+.title1 p {
     width: 9.725rem;
     height: 2rem;
-    margin: -0.4rem auto 0.125rem;
+    margin: -.4rem auto .125rem;
+
     font-size: .5rem;
+
     text-align: center;
+
     color: #648357;
     background-color: #bac79c;
 }
-.title img {
+.title1 img {
     position: absolute;
 }
-.title .bbqb01 {
+.title1 .bbqb01 {
     top: .425rem;
     left: .175rem;
+
     width: 3.225rem;
 }
-.title .bbqb02 {
+.title1 .bbqb02 {
     top: .55rem;
     right: .1rem;
+
     width: 12.275rem;
 }
 .pug {
@@ -419,17 +489,20 @@ a {
     width: 100%;
     height: 6.15rem;
     margin-top: .3rem;
+
     background-color: #edb2bb;
 }
 .pugtwo li {
     float: left;
     width: 5.075rem;
     height: 100%;
+
     border-right: .375rem solid #edb2bb;
     background-color: #edb2bb;
 }
 .pugtwo li.uu {
     float: right;
+
     border: 0;
 }
 .start {
@@ -437,24 +510,29 @@ a {
 }
 .start .Sttop {
     margin-top: 1.125rem;
+
     font-size: 1rem;
 }
 .start .Stcenter {
     margin-top: .5rem;
+
     font-size: .45rem;
     line-height: .65rem;
+
     color: #000;
 }
 .zx {
     width: 2.575rem;
     height: .7rem;
     margin: .5rem auto 0;
+
     border: .025rem solid #fff;
 }
 .zx a {
     font-size: .425rem;
     font-weight: 700;
     line-height: .7rem;
+
     color: #000;
 }
 .issue-in {
@@ -463,15 +541,18 @@ a {
 }
 .issue-in li {
     position: relative;
+
     float: left;
     width: 5.275rem;
     height: 5.375rem;
     margin: .125rem .025rem;
+
     text-align: center;
 }
 .issue-in li img {
     display: inline;
     padding: .125rem;
+
     border: .025rem dashed #eaeee1;
     border-radius: 50%;
 }
@@ -479,24 +560,29 @@ a {
     position: absolute;
     bottom: .65rem;
     left: 50%;
+
     font-size: .6rem;
+
     -webkit-transform: translate(-50%, 0);
     -moz-transform: translate(-50%, 0);
     -ms-transform: translate(-50%, 0);
     -o-transform: translate(-50%, 0);
     transform: translate(-50%, 0);
+
     color: #72572c;
 }
 .boult {
     width: .8rem;
     height: .75rem;
     margin: 0 auto;
+
     background-color: #fff;
 }
 .boult-b {
     width: 0;
     height: 0;
     margin: 0 auto;
+
     border-top: .875rem solid #fff;
     border-right: .75rem solid transparent;
     border-left: .75rem solid transparent;
@@ -505,6 +591,7 @@ a {
     width: 5.825rem;
     height: 1.525rem;
     margin: 0 auto;
+
     background: url(//img.hzshuangmei.com/m/hzbbqb/images/anliyinying.png) no-repeat bottom center;
     -webkit-background-size: contain;
     background-size: contain;
@@ -512,7 +599,9 @@ a {
 .anlitt .TTtop {
     width: 100%;
     height: 1.3rem;
+
     text-align: center;
+
     background-color: #98b478;
 }
 .anlitt .TTtop .p1 {
@@ -522,13 +611,16 @@ a {
 }
 .anlitt .TTtop .p2 {
     font-size: .25rem;
+
     color: #ccdabc;
 }
 .anli {
     position: relative;
+
     width: 100%;
     height: 11.675rem;
     margin: 1.375rem auto 0;
+
     background: url(//img.hzshuangmei.com/m/hzbbqb/images/anlibg.png) no-repeat top center;
 }
 .anli div {
@@ -552,12 +644,15 @@ a {
     float: left;
     width: 15.25rem;
     height: .675rem;
+
     background-color: #98b478;
 }
 .imgtitle .qq span {
     padding: 0 1.7rem 0 1.35rem;
+
     font-size: .4rem;
     line-height: .65rem;
+
     color: #fff;
 }
 .imgtitle .qq .shuhou {
@@ -584,7 +679,8 @@ a {
     height: 13.375rem;
     margin: 0 auto;
     overflow: hidden;
-    background: url(//img.hzshuangmei.com/m/hzbbqb/images/lzk.png) no-repeat bottom left;
+
+    background: url(//img.hzshuangmei.com/m/hzbbqb/images/lzk.png) no-repeat top left;
 }
 .doctorarc {
     width: 10rem;
@@ -594,23 +690,27 @@ a {
     margin-left: auto;
 }
 .doctorarc-t {
-    width: 100%;
+    width: 386px;
     height: 1.575rem;
+    margin-left: 22px;
+
     border-bottom: .025rem solid #dde3ce;
 }
 .doctorarc-t li {
     float: left;
 }
 .dol {
-    width:4.8rem;
+    width: 4.8rem;
     height: 100%;
-    margin-left:0.575rem;
+    /*margin-left:0.575rem;*/
 }
-.dol img{
+.dol img {
     margin-left: 32px;
 }
 .dol p {
     font-size: .6rem;
+    line-height: .6rem;
+
     color: #fff;
 }
 .likee {
@@ -626,6 +726,7 @@ a {
     width: 0;
     height: 0;
     margin-top: 1rem;
+
     border-right: .325rem solid transparent;
     border-bottom: .4rem solid #dde3ce;
     border-left: .325rem solid transparent;
@@ -635,50 +736,65 @@ a {
     height: 4.325rem;
     margin-top: .5rem;
     margin-left: auto;
+
     font-size: .45rem;
     line-height: .45rem;
 }
 .abstract p {
     width: 100%;
-    height: .45rem;
-    padding-left: .7rem;
+    /*height: .45rem;*/
+    padding-left: .5rem;
+    margin-bottom: 12px;
     box-sizing: border-box;
+
+    line-height: .55rem;
+
     color: #fff;
-    background: url(//img.hzshuangmei.com/m/hzbbqb/images/xin3.png) no-repeat left top;
+    background: url(//img.hzshuangmei.com/m/hzbbqb/images/xin3.png) no-repeat left 5px;
 }
 .goodat {
     width: 2.575rem;
     height: 1.05rem;
-    margin: .5rem 0 0 2.55rem;
+    margin: .9rem 0 0 52px;
+
     font-size: .4rem;
     font-weight: 700;
-    line-height: .925rem;
+    line-height: .85rem;
+
     color: #5c5b7e;
     background: url(//img.hzshuangmei.com/m/hzbbqb/images/goodat.png) no-repeat;
+    background-size: 103px 42px;
 }
 .goodat em {
     margin-right: .125rem;
 }
 .goodatarc {
-    width: 75%;
-    height: 1.7rem;
-    margin-left: auto;
+    width: 308px;
+    /*height: 1.7rem;*/
+    margin-left: 50px;
+
     font-size: .45rem;
     line-height: .775rem;
+
     color: #fff;
 }
 .zixun {
     width: 100%;
     height: 1.625rem;
     padding-top: .45rem;
+
     text-align: center;
+
     background-color: #9ccfcc;
 }
 .zixun a {
     padding: .2rem 1.5rem .2rem 1.5rem;
+
     font-size: .6rem;
     font-weight: 700;
+
     text-decoration: none;
+
     color: #fff;
     border: .025rem solid #fff;
 }
@@ -686,12 +802,14 @@ a {
     width: 100%;
     height: 1.6rem;
     overflow: hidden;
+
     background-color: #fffffc;
 }
 .ljzx p {
     width: 5.175rem;
     height: .875rem;
     margin: .425rem auto 0;
+
     border: .025rem solid #ed7c61;
     border-radius: .125rem;
 }
@@ -699,17 +817,20 @@ a {
     display: block;
     width: 100%;
     height: 100%;
+
     font-size: .5rem;
     font-weight: 700;
     line-height: .875rem;
+
     text-align: center;
+
     color: #ed7c61;
 }
 .anliyw {
     display: inline;
 }
 .main {
-    font-size: 0.5rem;
+    font-size: .5rem;
 }
 .cc {
     width: 6.7rem;
@@ -760,7 +881,7 @@ a {
     width: 3.625rem;
 }
 .imgtitle img {
-    width: 0.35rem;
+    width: .35rem;
 }
 .pugtow img {
     width: 6.15rem;
