--- a/static.hzshuangmei.com/css/m/hzbbqb/css1.css
+++ b/static.hzshuangmei.com/css/m/hzbbqb/css1.css
@@ -115,7 +115,7 @@ a {
     width: 100%;
     height: 4.65rem;
     background: url(//img.hzshuangmei.com/m/hzbbqb/images/ysbyinying.png) no-repeat bottom center;
-    background-size: 180px 14px;
+    background-size: 4.5rem 0.35rem;
 }
 .MOner-top p,
 .Mttop-in p {
@@ -598,7 +598,7 @@ a {
 .doctorarc-t {
     width: 9.65rem;
     height: 1.575rem;
-    margin-left: 0.55rem;
+    margin-left: .55rem;
     border-bottom: .025rem solid #dde3ce;
 }
 .doctorarc-t li {
@@ -610,7 +610,7 @@ a {
     /*margin-left:0.575rem;*/
 }
 .dol img {
-    margin-left: 0.8rem;
+    margin-left: .8rem;
 }
 .dol p {
     width: 5.2rem;
@@ -639,7 +639,7 @@ a {
     width: 8.075rem;
     height: 4.325rem;
     margin-top: .5rem;
-    margin-left: 0.25rem;
+    margin-left: .25rem;
     font-size: .45rem;
     line-height: .45rem;
 }
@@ -647,20 +647,21 @@ a {
     width: 100%;
     /*height: .45rem;*/
     padding-left: .5rem;
-    margin-bottom: 0.3rem;
+    margin-bottom: .3rem;
     box-sizing: border-box;
     line-height: .55rem;
     color: #fff;
     background: url(//img.hzshuangmei.com/m/hzbbqb/images/xin3.png) no-repeat left 0.125rem;
-    background-size: 16px 12px;
+    background-size: 0.4rem 0.3rem;
 }
-.abstract>p:nth-child(4),.abstract>p:nth-child(5){
+.abstract > p:nth-child(4),
+.abstract > p:nth-child(5) {
     width: 10rem;
 }
 .goodat {
     width: 2.575rem;
     height: 1.05rem;
-    margin: 0.9rem 0 0 1.3rem;
+    margin: .9rem 0 0 1.3rem;
     font-size: .4rem;
     font-weight: 700;
     line-height: .85rem;
@@ -753,8 +754,8 @@ a {
 .bb {
     width: 8.025rem;
 }
-.pugtwo img{
-    height:6.15rem;
+.pugtwo img {
+    height: 6.15rem;
 }
 .pug img {
     width: 5.075rem;
@@ -780,6 +781,9 @@ a {
 .pugtow img {
     width: 6.15rem;
 }
-.mm{
-    width:2.625rem;
+.mm {
+    width: 2.625rem;
+}
+.sjimgy {
+    width: 1.825rem;
 }
