--- a/static.hzshuangmei.com/css/m/hzbbqb/css1.css
+++ b/static.hzshuangmei.com/css/m/hzbbqb/css1.css
@@ -91,11 +91,13 @@ a {
 .main01,
 .main02 {
     position: relative;
+    font-size: 0;
     width: 15.725rem;
     height: 9.475rem;
     padding-top: .25rem;
     margin: 0 auto;
 }
+
 .main01 .MOnel {
     float: left;
     width: 10rem;
@@ -134,10 +136,11 @@ a {
     color: #fff;
 }
 .MOarc {
-    width: 4.4rem;
+    width: 4.2rem;
     height: 2.85rem;
     padding: .25rem 0 0 .625rem;
     background-color: #74a6a5;
+    font-size: 0.475rem;
 }
 .MOner-b {
     position: relative;
@@ -199,6 +202,7 @@ a {
     font-size: .475rem;
     background-color: #c7ad92;
 }
+
 .Mttop-in p em {
     right: -1.4rem;
 }
