--- a/static.hzshuangmei.com/css/m/hzrlbns/css1.css
+++ b/static.hzshuangmei.com/css/m/hzrlbns/css1.css
@@ -43,23 +43,23 @@ a {
 .whatt {
     width: 100%;
     height: 1.125rem;
-    padding: 0.125rem 0 0 0.375rem;
+    padding: .125rem 0 0 .375rem;
     box-sizing: border-box;
     background-color: #aeadbf;
 }
 .hrr {
     width: 100%;
-    height: 0.175rem;
-    margin-top: 0.125rem;
+    height: .175rem;
+    margin-top: .125rem;
     background-color: #aeadbf;
 }
 .whattboarc {
     width: 100%;
     height: 1.575rem;
-    margin: 0.625rem auto 0;
+    margin: .625rem auto 0;
     font-family: "华文细黑";
-    font-size: 0.45rem;
-    line-height: 0.525rem;
+    font-size: .45rem;
+    line-height: .525rem;
     text-align: center;
 }
 .contentt {
@@ -71,22 +71,23 @@ a {
     width: 9.125rem;
     height: 1.2rem;
     margin: 0 auto;
-    border-bottom: 0.025rem solid #fff;
+    border-bottom: .025rem solid #fff;
 }
 .triangle {
     width: 0;
     height: 0;
-    margin: 0.2rem auto 0;
-    border-top: 0.725rem solid #ceced9;
-    border-right: 0.75rem solid transparent;
-    border-left: 0.75rem solid transparent;
+    margin: .2rem auto 0;
+    border-top: .725rem solid #ceced9;
+    border-right: .75rem solid transparent;
+    border-left: .75rem solid transparent;
 }
 .year {
     width: 16rem;
     height: 10.9rem;
-    margin-top: 0.675rem;
+    margin-top: .675rem;
     margin-left: auto;
     background: url(//img.hzshuangmei.com/m/hzrlbns/images/year.png) no-repeat;
+    background-size: 16rem 9.45rem;
 }
 .year ul {
     width: 100%;
@@ -96,8 +97,8 @@ a {
     float: left;
     width: 3.675rem;
     height: 100%;
-    margin-right: 0.4rem;
-    font-size: 0.5rem;
+    margin-right: .4rem;
+    font-size: .5rem;
     line-height: 1.25rem;
     text-align: center;
     color: #32486c;
@@ -140,7 +141,7 @@ a {
 }
 .effect-one .qleft div {
     width: 100%;
-    height: 0.9rem;
+    height: .9rem;
     background: linear-gradient(#68718d, transparent);
 }
 .posithree {
@@ -150,8 +151,8 @@ a {
     margin-top: 2.125rem;
 }
 .posithree .posionep {
-    margin-top: 0.25rem;
-    font-size: 0.9rem;
+    margin-top: .25rem;
+    font-size: .9rem;
     font-weight: 700;
     color: #9ccfcc;
 }
@@ -159,24 +160,24 @@ a {
     position: relative;
     display: inline-block;
     width: 5.675rem;
-    height: 0.15rem;
-    border-top: 0.025rem solid #c5c5d2;
+    height: .15rem;
+    border-top: .025rem solid #c5c5d2;
 }
 .posithree span i {
     position: absolute;
     top: 1.275rem;
     left: -2.875rem;
     width: 3.475rem;
-    height: 0.025rem;
+    height: .025rem;
     -webkit-transform: rotate(-49deg);
     background-color: #c5c5d2;
 }
 .posithree em {
-    font-size: 0.5rem;
+    font-size: .5rem;
 }
 .posithree .tooparc {
-    font-size: 0.45rem;
-    line-height: 0.65rem;
+    font-size: .45rem;
+    line-height: .65rem;
     color: #e5e4e9;
 }
 .effect-two {
@@ -199,12 +200,12 @@ a {
     width: 8rem;
 }
 .posithree .tooparc strong {
-    padding-right: 0.8rem;
-    font-size: 0.6rem;
+    padding-right: .8rem;
+    font-size: .6rem;
     line-height: 1rem;
 }
 .posithree2 {
-    margin-top: 0.5rem;
+    margin-top: .5rem;
 }
 .posithree2 span i {
     left: 5.05rem;
@@ -219,7 +220,7 @@ a {
     width: 8rem;
 }
 .effect-three .posie {
-    margin-top: 0.5rem;
+    margin-top: .5rem;
 }
 .beauty {
     width: 16rem;
@@ -237,15 +238,16 @@ a {
 .step ul {
     width: 14.625rem;
     height: 5.425rem;
-    margin: 1.3rem 0 0 0.625rem;
+    margin: 1.3rem 0 0 .625rem;
 }
 .step ul li {
     float: left;
     width: 4.55rem;
     height: 5.275rem;
-    margin-right: 0.325rem;
+    margin-right: .325rem;
     background: url(//img.hzshuangmei.com/m/hzrlbns/images/bzyinying.png) no-repeat bottom center;
     background-color: #ccc;
+    background-size: 3.95rem 0.3rem;
 }
 .step ul li div {
     width: 100%;
@@ -254,12 +256,12 @@ a {
     background-color: #9ccfcc;
 }
 .step ul li div img {
-    margin: 0.05rem auto 0;
-    -webkit-border-radius: 0.25rem;
+    margin: .05rem auto 0;
+    -webkit-border-radius: .25rem;
 }
 .step ul li div p {
-    margin: 0.05rem;
-    font-size: 0.475rem;
+    margin: .05rem;
+    font-size: .475rem;
     color: #54716f;
 }
 .zhushe {
@@ -267,11 +269,11 @@ a {
     top: -0.6rem;
     font-size: 3rem;
     color: #ab739a;
-    text-shadow: 0.025rem 0.025rem 0.125rem #4c4c4c;
-    -mos-text-shadow: 0.025rem 0.025rem 0.125rem #4c4c4c;
-    -mz-text-shadow: 0.025rem 0.025rem 0.125rem #4c4c4c;
-    -webkit-text-shadow: 0.025rem 0.025rem 0.125rem #4c4c4c;
-    -o-text-shadow: 0.025rem 0.025rem 0.125rem #4c4c4c;
+    text-shadow: .025rem .025rem .125rem #4c4c4c;
+    -mos-text-shadow: .025rem .025rem .125rem #4c4c4c;
+    -mz-text-shadow: .025rem .025rem .125rem #4c4c4c;
+    -webkit-text-shadow: .025rem .025rem .125rem #4c4c4c;
+    -o-text-shadow: .025rem .025rem .125rem #4c4c4c;
 }
 .zs {
     left: -0.15rem;
@@ -280,9 +282,9 @@ a {
     width: 1.75rem;
     height: 3.9rem;
     padding-top: 1.625rem;
-    padding-left: 0.1rem;
-    font-size: 0.375rem;
-    font-size: 0.45rem;
+    padding-left: .1rem;
+    font-size: .375rem;
+    font-size: .45rem;
     text-align: center;
     color: #000;
     color: #fff;
@@ -303,21 +305,21 @@ a {
 }
 .advtitle img {
     display: inline;
-    margin-top: 0.125rem;
+    margin-top: .125rem;
 }
 .sjhr {
     width: 12.1rem;
-    height: 0.125rem;
+    height: .125rem;
     margin: 0 auto;
-    margin: 0.125rem auto 0.25rem;
+    margin: .125rem auto .25rem;
     background-color: #aeadbf;
 }
 .advantage {
     width: 100%;
     height: 19.375rem;
-    background: url(//img.hzshuangmei.com/m/hzrlbns/images/anli.png) no-repeat bottom center;
-    -webkit-background-size: contain;
-    background-size: contain;
+    /*background: url(//img.hzshuangmei.com/m/hzrlbns/images/anli.png) no-repeat bottom center;*/
+    /*-webkit-background-size: contain;*/
+    /*background-size: contain;*/
 }
 .advantage-in {
     width: 16rem;
@@ -333,12 +335,12 @@ a {
 }
 .advantage-top img {
     display: inline;
-    margin-top: 0.05rem;
+    margin-top: .05rem;
 }
 .hhr {
     width: 15.3rem;
-    height: 0.225rem;
-    margin: 0.125rem auto 1.1rem;
+    height: .225rem;
+    margin: .125rem auto 1.1rem;
     background-color: #aeadbf;
 }
 .advantage-one {
@@ -346,23 +348,24 @@ a {
     height: 6.5rem;
     overflow: hidden;
     background: url(//img.hzshuangmei.com/m/hzrlbns/images/advantage01.png) no-repeat;
+    background-size: 16rem 6.4rem;
 }
 .advantop {
-    font-size: 0.65rem;
+    font-size: .65rem;
     font-weight: 700;
     color: #fff;
 }
 .advantage-one .advantop {
-    margin: 1.95rem 0 0 0.95rem;
+    margin: 1.95rem 0 0 .95rem;
 }
 .advanarc {
-    font-size: 0.45rem !important;
-    line-height: 0.6rem;
+    font-size: .45rem !important;
+    line-height: .6rem;
 }
 .advantage-one .advanarc {
     width: 10.05rem;
     height: 2.2rem;
-    margin: 0.275rem 0 0 1rem;
+    margin: .275rem 0 0 1rem;
 }
 .advantage-two {
     width: 16rem;
@@ -370,6 +373,7 @@ a {
     overflow: hidden;
     text-align: right;
     background: url(//img.hzshuangmei.com/m/hzrlbns/images/advantage02.png) no-repeat bottom center;
+    background-size: 16rem 6.475rem;
 }
 .advantage-two .advantop {
     margin: 2.1rem 1.075rem 0 0;
@@ -377,7 +381,7 @@ a {
 .advantage-two .advanarc {
     width: 10.05rem;
     height: 2.2rem;
-    margin-top: 0.35rem;
+    margin-top: .35rem;
     margin-right: 1.025rem;
     margin-left: auto;
 }
@@ -386,26 +390,27 @@ a {
     height: 6.5rem;
     overflow: hidden;
     background: url(//img.hzshuangmei.com/m/hzrlbns/images/advantage03.png) no-repeat;
+    background-size: 16rem 6.5rem;
 }
 .advantage-three .advantop {
-    margin: 2.175rem 0 0 0.95rem;
+    margin: 2.175rem 0 0 .95rem;
 }
 .advanarc {
-    font-size: 0.55rem;
-    line-height: 0.75rem;
+    font-size: .55rem;
+    line-height: .75rem;
 }
 .advantage-three .advanarc {
     width: 10.05rem;
     height: 2.2rem;
-    margin: 0.3rem 0 0 1.025rem;
+    margin: .3rem 0 0 1.025rem;
 }
 .love {
     position: relative;
     width: 14.25rem;
     height: 6.325rem;
     margin: 1.4rem auto 0;
-    border: 0.025rem solid #aeadbf;
-    border-radius: 0.25rem;
+    border: .025rem solid #aeadbf;
+    border-radius: .25rem;
 }
 .love img {
     position: absolute;
@@ -427,7 +432,7 @@ a {
     float: left;
     width: 3.05rem;
     height: 100%;
-    font-size: 0.45rem;
+    font-size: .45rem;
     line-height: 1.125rem;
     text-align: center;
     color: #fff;
@@ -436,45 +441,47 @@ a {
     margin-left: 1.2rem;
 }
 .love ul li.limargin02 {
-    margin-left: 0.55rem;
+    margin-left: .55rem;
 }
 .love h3 {
     position: absolute;
     top: -0.75rem;
     left: 4.475rem;
     width: 5.2rem;
-    height: 0.95rem;
-    font-size: 0.5rem;
-    line-height: 0.95rem;
+    height: .95rem;
+    font-size: .5rem;
+    line-height: .95rem;
     text-align: center;
-    letter-spacing: 0.025rem;
+    letter-spacing: .025rem;
     color: #fff;
-    border: 0.05rem solid #b7b7c6;
-    border-radius: 0.25rem;
+    border: .05rem solid #b7b7c6;
+    border-radius: .25rem;
     background-color: #5c5b7d;
 }
 .matterr {
     width: 16rem;
     height: 8.475rem;
-    margin: 0.85rem auto 0;
+    margin: .85rem auto 0;
     overflow: hidden;
     background: url(//img.hzshuangmei.com/m/hzrlbns/images/ban02.jpg) no-repeat top center;
+    background-size: 16rem 8.475rem;
 }
 .matter-top {
     width: 4.575rem;
     height: 1.3rem;
-    margin: 0.4rem 0 0 1.4rem;
+    margin: .4rem 0 0 1.4rem;
     background: url(//img.hzshuangmei.com/m/hzrlbns/images/yinying.png) no-repeat bottom center;
+    background-size: 4.475rem 0.375rem;
 }
 .matter-top h3 {
     width: 100%;
     height: 1.075rem;
-    font-size: 0.75rem;
+    font-size: .75rem;
     line-height: 1.075rem;
     text-align: center;
-    letter-spacing: 0.025rem;
+    letter-spacing: .025rem;
     color: #fff;
-    border-radius: 0.25rem;
+    border-radius: .25rem;
     background-color: #e48295;
 }
 .matter-b {
@@ -488,15 +495,15 @@ a {
     line-height: 1.125rem;
 }
 .matter-b span {
-    padding-bottom: 0.1rem;
-    margin-left: 0.3rem;
-    font-size: 0.5rem;
+    padding-bottom: .1rem;
+    margin-left: .3rem;
+    font-size: .5rem;
     color: #7f7f81;
-    border-bottom: 0.025rem dashed #fff;
+    border-bottom: .025rem dashed #fff;
 }
 .matter-b em {
-    padding: 0 0.15rem;
-    font-size: 0.5rem;
+    padding: 0 .15rem;
+    font-size: .5rem;
     color: #fff;
     background-color: #e48295;
 }
@@ -509,12 +516,12 @@ a {
 }
 .doctor img {
     display: inline;
-    margin-top: 0.25rem;
+    margin-top: .25rem;
 }
 .hrr {
     width: 16rem;
-    height: 0.125rem;
-    margin: 0.1rem auto 0;
+    height: .125rem;
+    margin: .1rem auto 0;
 }
 .doctor-b {
     width: 16rem;
@@ -522,6 +529,7 @@ a {
     margin: 0 auto;
     overflow: hidden;
     background: url(//img.hzshuangmei.com/m/hzrlbns/images/like.png) no-repeat bottom left;
+    background-size: 8.175rem 13.275rem;
 }
 .doctorarc {
     width: 10rem;
@@ -532,7 +540,7 @@ a {
 .doctorarc-t {
     width: 100%;
     height: 1.575rem;
-    border-bottom: 0.025rem solid #afaec0;
+    border-bottom: .025rem solid #afaec0;
 }
 .doctorarc-t li {
     float: left;
@@ -543,7 +551,7 @@ a {
     margin-left: 1.875rem;
 }
 .dol p {
-    font-size: 0.6rem;
+    font-size: .6rem;
     color: #fff;
 }
 .likee {
@@ -551,66 +559,68 @@ a {
     height: auto;
 }
 .likee img {
-    margin-top: 0.275rem;
+    margin-top: .275rem;
     margin-left: auto;
 }
 .likesj {
     width: 0;
     height: 0;
     margin-top: 1rem;
-    border-right: 0.325rem solid transparent;
-    border-bottom: 0.4rem solid #afaebe;
-    border-left: 0.325rem solid transparent;
+    border-right: .325rem solid transparent;
+    border-bottom: .4rem solid #afaebe;
+    border-left: .325rem solid transparent;
 }
 .abstract {
     width: 8.075rem;
     height: 4.325rem;
-    margin-top: 0.5rem;
+    margin-top: .5rem;
     margin-left: auto;
-    font-size: 0.45rem;
-    line-height: 0.75rem;
+    font-size: .45rem;
+    line-height: .75rem;
 }
 .abstract p {
     width: 100%;
-    height: 0.75rem;
-    padding-left: 0.7rem;
+    height: .75rem;
+    padding-left: .7rem;
     box-sizing: border-box;
     color: #fff;
     background: url(//img.hzshuangmei.com/m/hzrlbns/images/xin3.png) no-repeat left center;
+    background-size: 0.4rem 0.3rem;
 }
 .goodat {
     width: 2.575rem;
     height: 1.05rem;
-    margin: 0.5rem 0 0 2.55rem;
-    font-size: 0.45rem;
+    margin: .5rem 0 0 2.55rem;
+    font-size: .45rem;
     font-weight: 700;
-    line-height: 0.925rem;
+    line-height: .925rem;
     color: #5c5b7e;
     background: url(//img.hzshuangmei.com/m/hzrlbns/images/goodat.png) no-repeat;
+    background-size: 2.575rem 1.05rem;
 }
 .goodat em {
-    margin-right: 0.125rem;
+    margin-right: .125rem;
 }
 .goodatarc {
     width: 70%;
     height: 1.7rem;
     margin-left: auto;
-    font-size: 0.55rem;
+    font-size: .55rem;
     line-height: 1.075rem;
     color: #fff;
 }
 .zixun {
     width: 100%;
     height: 1.625rem;
-    padding-top: 0.45rem;
+    padding-top: .45rem;
     text-align: center;
     background-color: #9ccfcc;
 }
 .zixun a {
-    padding: 0.2rem 1.5rem 0.2rem 1.5rem;
-    font-size: 0.6rem;
+    padding: .2rem 1.5rem .2rem 1.5rem;
+    font-size: .6rem;
     font-weight: 700;
     text-decoration: none;
     color: #fff;
-    border: 0.025rem solid #fff;
+    border: .025rem solid #fff;
 }
