--- a/static.hzshuangmei.com/css/m/hzrlbns/css1.css
+++ b/static.hzshuangmei.com/css/m/hzrlbns/css1.css
@@ -168,7 +168,7 @@ a {
     top: 1.275rem;
     left: -2.875rem;
     width: 3.475rem;
-    height: .025rem;
+    height: 1rem;
     -webkit-transform: rotate(-49deg);
     -ms-transform: rotate(-49deg);
     transform: rotate(-49deg);
