--- a/static.hzshuangmei.com/css/pc/common.css
+++ b/static.hzshuangmei.com/css/pc/common.css
@@ -26,7 +26,16 @@ header .top .shuang_m1 .tel { background: url(//img.hzshuangmei.com/pc/h_phone.p
 header .top .shuang_m1 .wbo { background: url(//img.hzshuangmei.com/pc/h_weibo.png) no-repeat center; }
 header .top .shuang_m1 .wxin { background: url(//img.hzshuangmei.com/pc/h_weixin.png) no-repeat center; }
 header .top .shuang_m1 .qq { background: url(//img.hzshuangmei.com/pc/h_qq.png) no-repeat center; }
-header .sm_logo { height: 131px; text-align: center; background-color: #fff; }
+header .sm_logo { height: 131px; text-align: center; background-color: #fff; -webkit-animation-name: dissappear; animation-name: dissappear; -webkit-animation-timing-function: linear; animation-timing-function: linear; -webkit-animation-duration: 3s; animation-duration: 3s; -webkit-animation-fill-mode: forwards; animation-fill-mode: forwards; animation-delay: 3s; -webkit-animation-delay: 3s; }
+@-webkit-keyframes dissappear {
+    0% { height: 21px; }
+    50% { height: 10px; }
+    100% { height: 0; display: none; visibility: hidden; }
+}
+@keyframes dissappear {
+    0% { height: 21px; width: 100%; opacity: 1; }
+    100% { height: 0; width: 100%; display: none; visibility: hidden; opacity: 0; }
+}
 header .sm_logo img { display: inline-block; padding-top: 7px; }
 #nav { width: 100%; height: 59px; background-color: #410e6b; }
 .fixed { position: fixed; top: 0; left: 0; z-index: 99999; width: 100%; animation: show; animation-duration: .5s; }
@@ -172,4 +181,4 @@ body .popup .layui-layer-btn .layui-layer-btn2 { width: 120px; margin: 5px 15px 
 
 /* lazysizes */
 .lazyload, .lazyloading { opacity: 0; }
-.lazyloaded { opacity: 1; transition: opacity 500ms;  }
+.lazyloaded { opacity: 1; transition: opacity 500ms; }
